started sms to client changes

--- a/hello.html
+++ b/hello.html
@@ -8,8 +8,10 @@
       <button id="importBtn">Import</button>
     </div>
     <div>
-      <p><strong>Quick Email</strong></p>
-      <button id="emailBtn">Email Current Client</button>
+      <p><strong>Quick Contact</strong></p>
+      <button id="emailSmsBtn">Email & SMS Client</button>
+      <button id="emailBtn">Email Client</button>
+      <button id="SmsBtn">SMS Client</button>
     </div>
     <div>
       <p><strong>Tech Search</strong></p>
