quick contact intro

--- a/hello.html
+++ b/hello.html
@@ -11,7 +11,7 @@
       <p><strong>Quick Contact</strong></p>
       <button id="emailSmsBtn">Email & SMS Client</button>
       <button id="emailBtn">Email Client</button>
-      <button id="SmsBtn">SMS Client</button>
+      <button id="smsClientBtn">SMS Client</button>
     </div>
     <div>
       <p><strong>Tech Search</strong></p>
