removed extra text message buton, made texting clients adaptive

--- a/hello.html
+++ b/hello.html
@@ -26,8 +26,7 @@
     </div>
     <div>
       <p><strong>Quick Confirmation Texts</strong></p>
-      <button id="smsBtn1">Regular</button>
-      <button id="smsBtn2">Friday</button>
+      <button id="smsBtn1">Send Texts</button>
     </div>
     <div>
       <p><strong>Quick invoice</strong></p>
