added mass archive

--- a/hello.html
+++ b/hello.html
@@ -29,6 +29,11 @@
       <button id="smsBtn1">Send Texts</button>
     </div>
     <div>
+      <p><strong>Mass Archive</strong></p>
+      <button id="massArchiveBtn">Archive Jobs</button>
+      <button id="massArchiveResetBtn">Reset Flag</button>
+    </div>
+    <div>
       <p><strong>Quick invoice</strong></p>
       <button id="invoiceBtn">Approve Invoices</button>
       <button id="invoiceBtn2">Process Invoices</button>
