--- a/hello.html
+++ b/hello.html
@@ -33,8 +33,10 @@
       <p><strong>Field Price Calculator</strong></p>
       <p id="buyPrice">Buy Price</p>
       <input id="buyPriceBox">
-      <p id="mielePrice">Miele Price</p>
+      <p id="mielePrice">Miele Price: (Price*75%)*170%</p>
       <input id="mielePriceBox" readonly>
+      <p id="boschPrice">Bosch Price: Price*170%</p>
+      <input id="boschPriceBox" readonly>
       <p id="fieldPrice">Field Price</p>
       <input id="fieldPriceBox" readonly>
     </div>
